# bgfx.cmake

./: .gitmodules  CMakeLists.txt
.github/workflows/: release.yml
cmake/: bgfx.cmake  bgfxToolUtils.cmake  bimg.cmake  bx.cmake  examples.cmake  shared.cmake
cmake/tools/: geometryc.cmake  shaderc.cmake
